@@ -1,6 +1,6 @@
 DIST ruby-feedparser-0.2.tgz 392767 RMD160 9cb88449b558a2d68ff6b7b1771609a74d8e49a3 SHA1 ce2298aa440c6911154075cf327e6b025d6b7b4b SHA256 94bfe98ae5a1ecaffd2cf80ef00e9ddec72d5e9483949c70398d8cfe94074b0a
 DIST ruby-feedparser-0.6.tgz 32070 RMD160 bd3b5bcb680f0030af06ebda97208fa1be3197c2 SHA1 a5928c30fa8e3e9ee8e2f0c6522e9980949a7919 SHA256 79a391423c50ccca845baf87df7a9c336d1df8c9b0566ffde413656a7647efa7
 EBUILD ruby-feedparser-0.2.ebuild 347 RMD160 0cc6cd2b1ec01709f4da2f66c82fff3c1415fac6 SHA1 936110d3b3954016267d76c131c9710ff312fb62 SHA256 1abaf921d818781c1561a73c631c307bbba425cdcceecba1f119544e59ba54a8
-EBUILD ruby-feedparser-0.6.ebuild 511 RMD160 2b59bb93918ad14465bd1c0b9c5c6acdc88935af SHA1 2469e5602be18c5e84470281f24ef1b3a59e0dcb SHA256 e1a5f8e8601fa95b0f7d2c412b95b359b4e8aa2b0d2263710ee66d1b0728fb02
-MISC ChangeLog 506 RMD160 56e3ec0db77718ad6241c4d48bf97d3b4905654a SHA1 973f99d4863d7d85b7a0a37a76d35d1156ec84b4 SHA256 7c82830975025183421e85abf7fa7856f6168bd9c86d1f2b3531b9952bf86717
+EBUILD ruby-feedparser-0.6.ebuild 522 RMD160 b19fccb32b0fd9516c6fa64913449203943a1c43 SHA1 ab2b00b20360e288d20fbecc523359b3577696ff SHA256 1d0bb84e95d5cc0a3f742ec53712a8e6346e4867979cf05fb51ab3b9498a11cd
+MISC ChangeLog 622 RMD160 e2f97fb90baa67a696bbeb9d15b82920fd532f95 SHA1 f7e1e4d3d82d48048bee531c4e2fc813670de067 SHA256 e47dedb7f17dc7c48e12fb3ba565943a6a56943a48a7e86719128870d0aca93d
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
