@@ -4,14 +4,14 @@
 
 inherit ruby
 
-DESCRIPTION="Ruby library for parsing RSS and Atom feeds."
+DESCRIPTION="Ruby library for parsing RSS and Atom feeds"
 HOMEPAGE="http://home.gna.org/ruby-feedparser/"
 SRC_URI="http://download.gna.org/${PN}/${P}.tgz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64"
-
+KEYWORDS="~amd64 ~x86"
+IUSE=""
 USE_RUBY="ruby18 ruby19"
 
 src_install() {
